# hack_bunq_7.0_2026

./: .gitignore  Makefile  README.md  SUBMISSION.md  app_overview.md  backend_implementation_plan.md  backend_overview.md  bedrock_aws_models_sample_use.py  bunq_payment_amount_fix.md  docker-compose.yml  frontend_implementation.md  integration_bunq.md  mcp_implementation.md  person_c_plan.md  plan_draft.md
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-staging.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_recipes.py  0003_carts_orders.py  0004_meals.py  0004_recipe_image_url_text.py  0005_meals.py  0006_meal_cards.py  0007_order_payment_method.py  0008_meal_shares.py
backend/app/: config.py  db.py  dependencies.py  main.py  middleware.py  security.py  stubs.py
backend/app/adapters/: bunq_cards.py  bunq_me.py  claude.py  deepseek.py  gemini.py  grocery_mcp.py
backend/app/background/: bunq_poll.py  images.py
backend/app/models/: __init__.py  base.py  cart.py  meal.py  meal_card.py  meal_share.py  order.py  profile.py  recipe.py  user.py
backend/app/orchestrator/: cart_flow.py  chat_flow.py  meal_card_flow.py  meal_flow.py  meal_plan_flow.py  meal_share_flow.py  order_flow.py  substitution_flow.py
backend/app/realtime/: __init__.py  events.py  hub.py
backend/app/routers/: auth.py  cart.py  chat.py  events.py  meal_card.py  meal_plan.py  meal_share.py  meals.py  orders.py  profile.py  recipes.py
backend/app/schemas/: __init__.py  auth.py  cart.py  common.py  meal.py  meal_card.py  meal_plan.py  meal_share.py  order.py  profile.py  recipe.py
backend/app/services/: rate_limit.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_auth.py  test_cart_flow.py  test_chat_flow.py  test_health.py  test_phase4.py  test_sse.py  test_stubs.py
deploy/: .env.example  README.md  docker-compose.staging.yml  docker-compose.yml  setup-ec2.sh
designs/: screens.html  screens2.html
ios/: project.yml
mcp/: .gitignore  Dockerfile  ah_client.py  bunq_payment.py  grocery_api.py  matching.py  picnic_client.py  requirements.txt  server.py  setup_bunq.py
(+44 files in other folders)
